experimentData/Jadx-detailedExperimentData/errorSamples/decompilation_failures/618/log-1-618.log

Test.java:59: error: illegal start of expression
                for (?? r2 = z2; i2 < r2; r2 = 1) {
                     ^
Test.java:59: error: illegal start of expression
                for (?? r2 = z2; i2 < r2; r2 = 1) {
                      ^
Test.java:59: error: : expected
                for (?? r2 = z2; i2 < r2; r2 = 1) {
                               ^
3 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

